client dashboard - added new btn routed to create new request, wrapped the 2 btns in a new div, added 'Client Dashboad' header for extra ux , fixed margins & gap between tha bts div and h1

--- a/src/modules/client-dashboard/components/client-dashboard-controls.module.css
+++ b/src/modules/client-dashboard/components/client-dashboard-controls.module.css
@@ -3,6 +3,16 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-end;
-  padding: 16px 32px;
+  justify-content: space-between;
+  padding: 15px 32px;
+}
+
+.secondContainer {
+
+  display: flex;
+  gap: 15px;
+}
+
+.secondButton{
+  margin-left: 15px;
 }
